syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse { int32 sum_result = 1; }

message SquareRootRequest { double number = 1; }

message SquareRootResponse { double number_root = 1; }

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  // error handling
  // This RPC will throw an error if the provided input is negativ.
  // The error being sent is of type INVALID_ARGUMENT.
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
